# JobOffer-Scanner

./: .coverage  .dockerignore  .env.example  .gitignore  .replit  CLAUDE.md  DEVELOPMENT.md  Dockerfile  README.md  REPLIT_DEPLOYMENT.md  alembic.ini  app.py  docker-compose.yml  init_db.py  models.py  pyproject.toml
.github/workflows/: tests.yml
.streamlit/: config.toml
agents/: __init__.py  company_analyzer.py  job_analyzer.py  orchestrator.py  report_generator.py  resume_analyzer.py  salary_analyzer.py
api/: auth.py  billing.py  main.py  routes.py  security.py  waitlist.py
attached_assets/: Pasted-Company-Oddin-gg-Location-Oddin-gg-is-the-global-leader-in-esports-data-scie-1740759234987.txt  Pasted-Overview-The-AI-driven-microSaaS-platform-helps-job-seekers-analyze-job-postings-evaluate-company-s-1740757753522.txt  Pasted-sqlalchemy-exc-OperationalError-psycopg2-OperationalError-SSL-connection-has-been-closed-unexpect-1740860665608.txt
auth/: __init__.py  forms.py
bot/: handlers.py  main.py
chrome-extension/: README.md  extract.js  extract.test.mjs  manifest.json  popup.html  popup.js
db/: models.py  session.py
deploy/: Caddyfile.example  Caddyfile.fullstack  README.md  RUNBOOK.md  nginx.conf.example
docs/: GTM.md  HARDENING.md  STRIPE_SETUP.md
landing/: README.md  index.html  privacy.html  terms.html
main/: __init__.py
migrations/: env.py
migrations/versions/: 1a94fd33628a_api_tokens.py  24da269ee301_application_shares.py  268857701205_oauth_identities.py  32e5033bc887_webhooks.py  3ba1c52f7b93_telegram_link.py  46b9602c99a1_email_verification.py  5d2f8a1c4e7b_totp_widen_col.py  7c1a9e3b5f02_llm_usage_ledger.py  83518f3daa22_master_cv_projects_artifacts.py  9e4b7d21c803_billing_tables.py  a3b401ffdd58_master_cv_revisions.py  b2f7c9d04a16_waitlist.py  b9baca11a442_initial_schema.py  bee6851b0338_inactivity_reminders.py  c067abb9272c_application_stages.py  cc044d01b2b9_background_analyses.py  e6cc454184fc_password_reset_tokens.py  f7cd19cbca6e_audit_events.py  fa017c8b7014_user_two_factor.py  initial_migration.py
models/: __init__.py
scripts/: backup_db.sh  restore_db.sh
services/: __init__.py  _ownership.py  account_export.py  analysis_runner.py  analytics.py  api_tokens.py  applications.py  audit.py  auth.py  background_analysis.py  billing.py  bulk_import.py  checkpoint.py  constraint_check.py  email.py  email_verify.py  funnel.py  master_cv.py  notifications.py  oauth.py  pdf_export.py  projects.py  rate_limit.py  reminders.py  sharing.py  stages.py  suggestions.py  system_test.py  tailoring.py  telegram_link.py  timeline.py  totp.py  usage.py  waitlist.py  webhooks.py
static/css/: style.css
static/js/: main.js
templates/: 404.html  500.html  base.html
templates/auth/: login.html  register.html  upgrade.html
templates/main/: analyze.html  dashboard.html  index.html  report.html
tests/: e2e_helpers.py  test_e2e_live.py  test_phase10_units.py  test_phase11_units.py  test_phase12_pdf.py  test_phase13_bulk_import.py  test_phase14_units.py  test_phase15_units.py  test_phase16_units.py  test_phase17_units.py  test_phase18_units.py  test_phase19_units.py  test_phase1_units.py  test_phase20_units.py  test_phase21_units.py  test_phase22_units.py  test_phase23_units.py  test_phase24_units.py  test_phase25_units.py  test_phase27_extension.py  test_phase28_ui_smoke.py  test_phase29_schema_drift.py  test_phase2_units.py  test_phase30_redis_state.py  test_phase31_account_lifecycle.py  test_phase32_email_verify.py  test_phase33_company_research.py  test_phase34_crypto_at_rest.py  test_phase35_llm_cost_controls.py  test_phase36_observability.py  test_phase37_webhook_durability.py  test_phase38_ops_backup.py  test_phase39_js_board_ingest.py  test_phase3_units.py  test_phase40_edge_proxy.py  test_phase41_e2e_journeys.py  test_phase42_config.py  test_phase43_billing.py  test_phase44_ssrf.py  test_phase45_funnel_waitlist.py  (+7 more)
tools/: __init__.py  browser_scraper.py  company_research.py  company_tools.py  data_sources.py  html_extract.py  job_tools.py  resume_tools.py  salary_tools.py  url_ingest.py
utils/: __init__.py  cache.py  config.py  crypto.py  diff.py  env.py  llm.py  logging_setup.py  metrics.py  security.py  text.py  timing.py  verdict.py
worker/: celery_app.py  funnel_report.py  metrics_dump.py  reminders.py  tasks.py
