[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "joboffer-scanner"
version = "0.2.0"
description = "AI-assisted job-offer analysis platform"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "altair>=5.5.0",
    "anthropic>=0.40.0",
    "bcrypt>=4.1.0",
    "beautifulsoup4>=4.13.3",
    "cryptography>=41.0.0",
    "fastapi>=0.110.0",
    "fpdf2>=2.8.7",
    "langchain>=0.3.19",
    "langgraph>=0.3.1",
    "openai>=1.65.1",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.12",
    "pyotp>=2.9.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "qrcode>=7.4.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.30",
    "streamlit>=1.42.2",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
worker = ["celery>=5.3.0", "redis>=5.0.0"]
browser = ["playwright>=1.44.0"]
pdf = ["fpdf2>=2.7.0"]
research = ["ddgs>=6.0"]  # keyless DuckDuckGo search for the agentic fallback
billing = ["stripe>=7.0"]  # Stripe Checkout + webhooks (tier enforcement works without it)
dev = [
    "ruff>=0.6",
    # Pin to the 1.x line: CI gates must use a reproducible type-checker, and
    # mypy 2.x is materially stricter (third-party stub shape changes). Bump
    # deliberately, re-running the whole `mypy` pass, not via unpinned drift.
    "mypy>=1.10,<2",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "coverage>=7.5",
    "types-requests",
]

# This is an APPLICATION, not an importable library. It's installed (pip
# install -e . / uv sync) only to pull the dependencies above — the source is
# imported from the repo root, which is on sys.path in every run context
# (Streamlit runs from the repo root; the API/worker/bot are launched as
# `python -m …` from the root; tests prepend the root). Telling setuptools
# there are no modules to package disables flat-layout auto-discovery, which
# otherwise errors out on our many top-level dirs (agents/, services/, db/, …).
[tool.setuptools]
py-modules = []

# --- Quality tooling --------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["migrations/versions"]  # generated-ish; alembic templates

[tool.ruff.lint]
# F (pyflakes) + E/W (pycodestyle) + I (isort). Pragmatic for an app.
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line length is handled by the formatter, not enforced hard
    "E741",  # ambiguous var names (l/I) — a few in chart code
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true   # langchain/openai/celery/etc. ship no stubs
# import-untyped fires for libs that *have* stubs (requests) but aren't
# resolved here; we type-check OUR code, not third-party signatures.
disable_error_code = ["import-untyped"]
warn_unused_ignores = false
check_untyped_defs = false
# Scope: the app packages we actively maintain types for. Tests + migrations
# are intentionally excluded (heavy mocking / generated code).
files = ["services", "utils", "db", "tools", "agents", "api", "bot", "worker"]

[tool.bandit]
exclude_dirs = ["tests", "migrations", ".venv"]

